time zone issue updated